cmake_minimum_required(VERSION 3.0)

project(hello-ns3)

set(NS3BUILDDIR /ns3/ns-3.29/build)
find_library(NSLIB01 ns3.29-core-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB02 ns3.29-stats-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB03 ns3.29-network-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB04 ns3.29-mobility-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB05 ns3.29-mpi-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB06 ns3.29-bridge-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB07 ns3.29-antenna-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB08 ns3.29-propagation-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB09 ns3.29-traffic-control-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB10 ns3.29-internet-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB11 ns3.29-spectrum-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB12 ns3.29-config-store-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB13 ns3.29-energy-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB14 ns3.29-wifi-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB15 ns3.29-point-to-point-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB16 ns3.29-csma-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB17 ns3.29-applications-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB18 ns3.29-fd-net-device-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB19 ns3.29-buildings-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB20 ns3.29-virtual-net-device-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB21 ns3.29-lte-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB22 ns3.29-lr-wpan-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB23 ns3.29-point-to-point-layout-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB24 ns3.29-uan-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB25 ns3.29-internet-apps-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB26 ns3.29-wave-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB27 ns3.29-wimax-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB28 ns3.29-flow-monitor-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB29 ns3.29-sixlowpan-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB30 ns3.29-olsr-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB31 ns3.29-dsr-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB32 ns3.29-csma-layout-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB33 ns3.29-mesh-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB34 ns3.29-nix-vector-routing-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB35 ns3.29-test-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB36 ns3.29-aodv-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB37 ns3.29-dsdv-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB38 ns3.29-tap-bridge-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB39 ns3.29-netanim-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB40 ns3.29-topology-read-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB41 ns3.29-antenna-test-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB42 ns3.29-buildings-test-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB43 ns3.29-applications-test-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB44 ns3.29-aodv-test-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB45 ns3.29-flow-monitor-test-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB46 ns3.29-dsdv-test-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB47 ns3.29-energy-test-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB48 ns3.29-dsr-test-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB49 ns3.29-core-test-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB50 ns3.29-internet-test-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB51 ns3.29-internet-apps-test-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB52 ns3.29-lr-wpan-test-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB53 ns3.29-lte-test-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB54 ns3.29-mesh-test-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB55 ns3.29-mobility-test-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB56 ns3.29-network-test-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB57 ns3.29-netanim-test-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB58 ns3.29-olsr-test-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB59 ns3.29-point-to-point-test-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB60 ns3.29-propagation-test-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB61 ns3.29-sixlowpan-test-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB62 ns3.29-stats-test-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB63 ns3.29-spectrum-test-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB64 ns3.29-topology-read-test-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB65 ns3.29-uan-test-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB66 ns3.29-traffic-control-test-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB67 ns3.29-wave-test-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB68 ns3.29-wifi-test-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB69 ns3.29-wimax-test-debug PATHS ${NS3BUILDDIR}/lib)
find_library(NSLIB70 ns3.29-test-test-debug PATHS ${NS3BUILDDIR}/lib)


set(SOURCE hello-ns3.cc)

add_executable(${PROJECT_NAME} ${SOURCE})
target_include_directories(${PROJECT_NAME} PUBLIC ${NS3BUILDDIR})
target_link_libraries(${PROJECT_NAME} ${NSLIB01} ${NSLIB02} ${NSLIB03} ${NSLIB04} ${NSLIB05} ${NSLIB06} ${NSLIB07} ${NSLIB08} ${NSLIB09} ${NSLIB10} ${NSLIB11} ${NSLIB12} ${NSLIB13} ${NSLIB14} ${NSLIB15} ${NSLIB16} ${NSLIB17} ${NSLIB18} ${NSLIB19} ${NSLIB20} ${NSLIB21} ${NSLIB22} ${NSLIB23} ${NSLIB24} ${NSLIB25} ${NSLIB26} ${NSLIB27} ${NSLIB28} ${NSLIB29} ${NSLIB30} ${NSLIB31} ${NSLIB32} ${NSLIB33} ${NSLIB34} ${NSLIB35} ${NSLIB36} ${NSLIB37} ${NSLIB38} ${NSLIB39} ${NSLIB40} ${NSLIB41} ${NSLIB42} ${NSLIB43} ${NSLIB44} ${NSLIB45} ${NSLIB46} ${NSLIB47} ${NSLIB48} ${NSLIB49} ${NSLIB50} ${NSLIB51} ${NSLIB52} ${NSLIB53} ${NSLIB54} ${NSLIB55} ${NSLIB56} ${NSLIB57} ${NSLIB58} ${NSLIB59} ${NSLIB60} ${NSLIB61} ${NSLIB62} ${NSLIB63} ${NSLIB64} ${NSLIB65} ${NSLIB66} ${NSLIB67} ${NSLIB68} ${NSLIB69} ${NSLIB70})